Improved accuracy with a new feature

--- a/Assignment 2/.vscode/launch.json
+++ b/Assignment 2/.vscode/launch.json
@@ -54,7 +54,7 @@
         "${fileDirname}/data/ner_training.csv",
         "-t",
         "${fileDirname}/data/ner_test.csv",
-        "-s"
+        "-mgd"
       ]
     }
   ]
